Added back formula line in display, adjusted CSS

--- a/src/App.css
+++ b/src/App.css
@@ -40,16 +40,23 @@ h4 /* copyright */ {
 
 .result {
   width: 240px;
-  height: 25px;
+  height: 37px;
   background-color: #222222;
   margin: 0 0 0 60px;
 }
 
+.lastCalc,
 .resultText {
   background-color: #222222;
+  font-size: 70%;
   padding: 0 7px 0 0;
   text-align: right;
   width: 233px;
+}
+
+.resultText {
+font-size: 100%;
+text-align: right;
 }
 
 .keypad {
