--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@ h4 /* copyright */ {
   margin: 5px 0 0 0;
 }
 
+.selected {
+  background-color: #00FF00;
+  color: #222222;
+}
+
 .mode {
   padding: 0;
   font-size: 10px;
