Trying to delete history need help

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,13 @@ h4 /* copyright */ {
   padding: 0 2px 5px 0;
 }
 
+h6 /* history entry */ {
+  background-color: #222222;
+  margin: 5px 0;
+  padding: 0;
+  width: 240px;
+}
+
 img {
   width: 5%;
   height: 5%;
