--- a/src/App.css
+++ b/src/App.css
@@ -14,24 +14,25 @@
 
 h1 /* Neato Calculator */ {
   text-align: center;
-  font-size: 100%;
+  font-size: 18px;
 }
 
 h2 /* by: James Mernin */ {
   text-align: center;
-  font-size: 65%;
+  font-size: 10px;
+  margin: -5px;
 }
 
 h3 /* History */ {
   display: inline;
-  font-size: 80%;
+  font-size: 14px;
   margin: 10px 0;
   padding: 0;
 }
 
 h4 /* copyright */ {
   display: inline;
-  font-size: 80%;
+  font-size: 14px;
   margin: 5px 0 0 0;
   padding: 0 2px 5px 0;
 }
@@ -44,8 +45,8 @@ h6 /* history entry */ {
 }
 
 img {
-  width: 5%;
-  height: 5%;
+  width: 14px;
+  height: auto;
   margin: 0 2px;
 }
 
@@ -66,14 +67,14 @@ img {
 .lastCalc,
 .resultText {
   background-color: #222222;
-  font-size: 70%;
+  font-size: 10px;
   padding: 0 7px 0 0;
   text-align: right;
   width: 233px;
 }
 
 .resultText {
-font-size: 100%;
+font-size: 16px;
 text-align: right;
 }
 
@@ -125,4 +126,43 @@ sup, sub {
 }
 sub { 
   top: 0.4em; 
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) and (min-height: 1024px) {
+  * {
+    transform: scale(1.08);
+    transform-origin: 0 0;
+  }
+
+  .result {
+    margin: 10px 0 0 65px;
+  }
+
+  .history {
+    margin: 25px 0 50px 0;
+  }
+
+  h3 {
+    margin: 20px;
+    padding: 10px;
+  }
+
+  #footer {
+    padding-left: 50px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  * {
+    transform: scale(1.02);
+    transform-origin: 0 0;
+  }
+
+  h2 {
+    margin: -10px;
+  }
+
+  .history {
+    margin: 10px 0 20px 0;
+  }
 }
