--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ h4 /* copyright */ {
 }
 
 h6 {
-  margin: 10px auto;
-  padding: 10px;
+  margin: 5px auto;
+  padding: 0;
   background-color: #222222;
 }
 
