--- a/src/App.css
+++ b/src/App.css
@@ -35,11 +35,18 @@ img {
   display: inline;
 }
 
+/* Code to hide scrollbar: https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp */
 #historyList {
   background-color: #222222;
   height: 200px;
   margin: 0 0 10px 0;
   overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+#historyList::-webkit-scrollbar {
+  display: none;
 }
 
 .historyRow {
