--- a/src/App.css
+++ b/src/App.css
@@ -371,3 +371,15 @@ sup, sub {
 sub { 
   top: 0.4em; 
 }
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  * {
+    color: #0000FF;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  * {
+    color: #FF0000;
+  }
+}
